azure/ingress-sharding/route-namespace-selector.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: httpd
    app.kubernetes.io/component: httpd
    app.kubernetes.io/instance: httpd
  name: httpd-shard-1
  namespace: sample2
spec:
  host: httpd-1-sample2.internalapps.bygbszpt.eastus2.aroapp.io
  subdomain: ""
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: httpd
    weight: 100
  wildcardPolicy: None
